syntax = "proto3";

package mailer;

option go_package = "notification-service/mailer";

message SendEmailRequest {
  string to = 1;
  string subject = 2;
  string body = 3;
  repeated string attachments = 4;
}

message SendEmailResponse {
  string message = 1;
}

service Mailer {
  rpc SendEmail(SendEmailRequest) returns (SendEmailResponse);
}

